# CaseSystem

./: .dockerignore  .env.docker.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  agents.md  compose.yaml  notes.md  problems.md  pyproject.toml
.sisyphus/: boulder.json
.sisyphus/plans/: event-module-design.md
backend/app/: __init__.py  auth.py  bootstrap.py  config.py  database.py  dependencies.py  enums.py  knowledge.py  main.py  models.py  policies.py  report_routes.py  reporting.py  reporting_storage.py  schemas.py  security.py  ticket_categories.py  ticket_detail_assets.py  ticketing.py
backend/tests/: conftest.py  test_alert_source_api.py  test_audit_api.py  test_auth_flow.py  test_authorization.py  test_config_api.py  test_event_api.py  test_event_task_flow_doc.py  test_knowledge_api.py  test_kpi_api.py  test_kpi_service.py  test_mail_sender_api.py  test_main_app.py  test_realtime_api.py  test_render_docker_env.py  test_report_api.py  test_runtime_schema.py  test_task_api.py  test_template_api.py  test_ticket_api.py  test_ticket_escalation_api.py  (+1 more)
casesystem/: auth.py  bootstrap.py  config.py  database.py  dependencies.py  enums.py  main.py  models.py  policies.py  schemas.py  security.py
docker/: api-entrypoint.sh  beat-entrypoint.sh  bootstrap_runtime.py  runtime-env.sh  worker-entrypoint.sh
docs/: Docker部署.md  Figma工单详情页提示词.md  api_ticket_creation.md  gitlab_cicd_runner_setup.md  前后端分离目录结构建议.md  系统总览设计.md  预览部署.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: create_tickets_batch.py  deploy_docker.sh  deploy_docker_fast.sh  deploy_preview.sh  deploy_tls_docker.sh  deploy_tls_remote.sh  gen_self_signed_cert.sh  render_docker_env.py  seed_users_and_pool_tickets.py  sync_remote_state.sh
tests/: conftest.py  test_auth_flow.py  test_authorization.py
(+225 files in other folders)
