[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "casesystem-auth"
version = "0.1.0"
description = "Identity and authorization module for the CaseSystem backend."
requires-python = ">=3.9"
dependencies = [
    "argon2-cffi>=23.1.0,<26.0.0",
    "eval-type-backport>=0.2.0,<1.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "PyJWT>=2.9.0,<3.0.0",
    "python-multipart>=0.0.20,<1.0.0",
    "sqlalchemy>=2.0.35,<3.0.0",
    "uvicorn>=0.31.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0,<1.0.0",
    "pytest>=8.3.0,<9.0.0",
]

[tool.setuptools.package-dir]
"" = "backend"

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
